--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
-    <title>Five Guys</title>
+    <title>PeekaBook</title>
 </head>
 <body ng-app="mainApp">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #3C096C;">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #32312D;">
           <div class="container">
-            <a class="navbar-brand" href="#/!">PeekaBook</a>
+            <a class="navbar-brand" href="#/!">
+              <i class="fa-solid fa-book-bookmark"></i>
+              PeekaBook
+            </a>
             <button class="navbar-toggler hidden-lg-up" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                 aria-expanded="false" aria-label="Toggle navigation"></button>
             <div class="collapse navbar-collapse" id="collapsibleNavId">
@@ -32,18 +35,22 @@
                 <li class="nav-item">
                   <a active-class="active" class="nav-link" href="#!movie">Movies</a>
                 </li>
+                <li class="nav-item">
+                  <a active-class="active" class="nav-link" href="#!shop-card">
+                    Shop Cart
+                  </a>
+                </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sign In</a>
                   <div class="dropdown-menu" aria-labelledby="dropdownId">
                     <a class="dropdown-item" href="#!login">Login</a>
-                    <a class="dropdown-item" href="#!shop-card">Shop Cart</a>
                     <a class="dropdown-item" href="#!digital-wallet">Digital Wallet</a>
                   </div>
                 </li>
               </ul>
               <form class="d-flex my-2 my-lg-0">
                 <input class="form-control me-sm-2" type="text" placeholder="Search product">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
               </form>
             </div>
           </div>
@@ -64,11 +71,37 @@
 <style>
 body { 
     padding-top: 65px; 
-    background-color: #9D4EDD;
+    background-color: #F0F4FC;
 
 }
 h1 {
-    color: #10002B;
+    color: #32312D;
 }
+nav i {
+  font-size: 30px;
+}
+
+.feedback {
+  background-color : #31B0D5;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 4px;
+  border-color: #46b8da;
+}
+
+#mybutton {
+  position: fixed;
+  bottom: -4px;
+  right: 10px;
+}
+	
+/* 
+#32312D - Light Black
+#7A8187 - Light Gray
+#9C9290 - light brown
+#C9CFCF - dark whitesmoke
+#F0F4FC  - whitesmoke
+*/
+
 </style>
 </html>
