Shopping cart done. Decide about pyshical/digital products. still need to work on design when other pages are done

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                     Shop Cart
                   </a>
                 </li>
+                
+              </ul>
+              <ul class="navbar-nav  mt-2 mt-lg-0">
                 <li ng-hide="logged" class="nav-item">
                   <a active-class="active" class="nav-link" href="#!login">
                     Login
@@ -53,10 +56,6 @@
                   </div>
                 </li>
               </ul>
-              <form class="d-flex my-2 my-lg-0">
-                <input class="form-control me-sm-2" type="text" placeholder="Search product">
-                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-              </form>
             </div>
           </div>
         </nav>
@@ -75,9 +74,8 @@
 
 <style>
 body { 
-    padding-top: 65px; 
+    padding-top: 50px; 
     background-color: #F0F4FC;
-
 }
 h1 {
     color: #32312D;
@@ -98,6 +96,7 @@ nav i {
   position: fixed;
   bottom: -4px;
   right: 10px;
+  color: red;
 }
 	
 /* 
