--- a/index.html
+++ b/index.html
@@ -35,18 +35,22 @@
                 <li class="nav-item">
                   <a active-class="active" class="nav-link" href="#!movie">Movies</a>
                 </li>
-                <li ng-show="logged" class="nav-item">
-                  <a active-class="active" class="nav-link" href="#!shop-card">
-                    Shop Cart
-                  </a>
-                </li>
+
                 
               </ul>
               <ul class="navbar-nav  mt-2 mt-lg-0">
+                <li ng-show="logged" class="nav-item" id="liCart">
+                  <div id="divCart">
+                    <a href="#!shop-card" id="navCartIcon" class="fa-solid fa-cart-arrow-down"></a>
+                  </div>
+                </li>
                 <li ng-hide="logged" class="nav-item">
-                  <a active-class="active" class="nav-link" href="#!login">
-                    Login
-                  </a>
+                  <div class="userIcon" >
+                    <a class="fa-solid fa-user nav-link" href="#!login"></a>
+                    <a active-class="active" class="nav-link" href="#!login">
+                      Login
+                    </a>
+                  </div>
                 </li>
                 <li ng-show="logged" class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{userLogged.toObj().userName}}</a>
@@ -74,7 +78,7 @@
 
 <style>
 body { 
-    padding-top: 50px; 
+    padding-top: 65px; 
     background-color: #F0F4FC;
 }
 h1 {
@@ -82,6 +86,46 @@ h1 {
 }
 nav i {
   font-size: 30px;
+}
+#liCart{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 3vh;
+}
+#navCartIcon{
+  color: #8f8f8d;
+  text-decoration: none;
+  font-size: 30px;
+}
+#navCartIcon:hover{
+  color: #F0F4FC;
+  cursor: pointer;
+}
+.userIcon{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+.fa-user {
+  font-size: 18px;
+  border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  height: 5vh;
+  width: 5vh;
+}
+.fa-user:hover{
+  color: #F0F4FC;
+}
+.userIcon a {
+  padding: 0;
 }
 
 .feedback {
