--- a/index.html
+++ b/index.html
@@ -71,49 +71,110 @@
 
     </main>
     <!-- <footer>
-      <span>&copy; Final Project - Five Guys - Taka, Matheus, Masashi, Lucas</span>
     </footer> -->
     
-
-  <footer class="py-5">
-    <div class="row">
+    <footer class="py-5">
+    <hr/>
+    <div class="row gap-3">
       <div class="col-2">
-        <h5>Section</h5>
+        <h5>Taka</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+          <li class="nav-item mb-2 
+          d-flex 
+          flex-row 
+          gap-2
+          align-items-center
+          ">
+            <a href="#" class="nav-link p-0 text-muted" target="_blank">GitHub</a>
+            <a class="link-dark fa-brands fa-github" href="#" target="_blank"></a>
+          </li>
+          <li class="nav-item mb-2 
+          d-flex 
+          flex-row 
+          gap-2
+          align-items-center
+          ">
+            <a href="#" class="nav-link p-0 text-muted" target="_blank">LinkedIn</a>
+            <a class="link-dark fa-brands fa-linkedin-in" href="#" target="_blank"></a>
+          </li>
         </ul>
       </div>
 
       <div class="col-2">
-        <h5>Section</h5>
+        <h5>Matheus</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+          <li class="nav-item mb-2 
+          d-flex 
+          flex-row 
+          gap-2
+          align-items-center
+          ">
+            <a href="https://github.com/matheusgolemb" class="nav-link p-0 text-muted" target="_blank">GitHub</a>
+            <a class="link-dark fa-brands fa-github" href="https://github.com/matheusgolemb" target="_blank"></a>
+          </li>
+          <li class="nav-item mb-2 
+          d-flex 
+          flex-row 
+          gap-2
+          align-items-center
+          ">
+            <a href="https://www.linkedin.com/in/matheus-sgolemb/" class="nav-link p-0 text-muted" target="_blank">LinkedIn</a>
+            <a class="link-dark fa-brands fa-linkedin-in" href="https://www.linkedin.com/in/matheus-sgolemb/" target="_blank"></a>
+          </li>
         </ul>
       </div>
 
       <div class="col-2">
-        <h5>Section</h5>
+        <h5>Masashi</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+          <li class="nav-item mb-2 
+          d-flex 
+          flex-row 
+          gap-2
+          align-items-center
+          ">
+            <a href="#" class="nav-link p-0 text-muted" target="_blank">GitHub</a>
+            <a class="link-dark fa-brands fa-github" href="#" target="_blank"></a>
+          </li>
+          <li class="nav-item mb-2 
+          d-flex 
+          flex-row 
+          gap-2
+          align-items-center
+          ">
+            <a href="#" class="nav-link p-0 text-muted" target="_blank">LinkedIn</a>
+            <a class="link-dark fa-brands fa-linkedin-in" href="#" target="_blank"></a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-2">
+        <h5>Lucas</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2 
+          d-flex 
+          flex-row 
+          gap-2
+          align-items-center
+          ">
+            <a href="#" class="nav-link p-0 text-muted" target="_blank">GitHub</a>
+            <a class="link-dark fa-brands fa-github" href="#" target="_blank"></a>
+          </li>
+          <li class="nav-item mb-2 
+          d-flex 
+          flex-row 
+          gap-2
+          align-items-center
+          ">
+            <a href="#" class="nav-link p-0 text-muted" target="_blank">LinkedIn</a>
+            <a class="link-dark fa-brands fa-linkedin-in" href="#" target="_blank"></a>
+          </li>
         </ul>
       </div>
 
-      <div class="col-4 offset-1">
+      <div class="col-3">
         <form>
-          <h5>Subscribe to our newsletter</h5>
-          <p>Monthly digest of whats new and exciting from us.</p>
+          <h5>Subscribe to our list of exclusive deals!</h5>
+          <p>Monthly deals and new products to you have a great time!</p>
           <div class="d-flex w-100 gap-2">
             <label for="newsletter1" class="visually-hidden">Email address</label>
             <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
@@ -123,13 +184,8 @@
       </div>
     </div>
 
-    <div class="d-flex justify-content-between py-4 my-4 border-top">
-      <p>© 2021 Company, Inc. All rights reserved.</p>
-      <ul class="list-unstyled d-flex">
-        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-      </ul>
+    <div class="d-flex justify-content-between py-1 my-1">
+      <span>&copy; Final Project - PeekaBook - Developed by: Taka, Matheus, Masashi, Lucas</span>
     </div>
   </footer>
 
@@ -144,13 +200,13 @@
 <style>
   body { 
     font-family: 'Manrope', sans-serif;
-    padding-top: 65px; 
+    padding-top: 70px; 
     background-color: #F0F4FC;
 }
 .navbar-brand{
   display: flex;
   justify-content: space-between;
-  width: 23vh;
+  width: 20vh;
 }
 .aColor{
   color: #D21F3C;
@@ -218,6 +274,15 @@ nav i {
   right: 10px;
   color: red;
 }
+
+.fa-brands{
+  text-decoration: none;
+  font-size: 20px;
+}
+footer{
+  padding-left: 2vh;
+  padding-right: 2vh;
+}
 	
 /* 
 #32312D - Light Black
@@ -226,6 +291,5 @@ nav i {
 #C9CFCF - dark whitesmoke
 #F0F4FC  - whitesmoke
 */
-
 </style>
 </html>
